security config changes